--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,28 +1,43 @@
-name: Lint and Test Charts
+name: CI
 
 on: pull_request
 
 jobs:
-  lint-test:
+  lint:
+    name: Lint
     runs-on: ubuntu-latest
+    outputs:
+      changed: ${{ steps.lint.outputs.changed }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
-      - name: Run chart-testing (lint)
+      - name: Lint
         id: lint
         uses: helm/chart-testing-action@v1.0.0
         with:
           command: lint
 
-      - name: Create kind cluster
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    needs: lint
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Create KinD cluster
         uses: helm/kind-action@v1.0.0
         # Only build a kind cluster if there are chart changes to test.
-        if: steps.lint.outputs.changed == 'true'
+        if: needs.lint.outputs.changed == 'true'
 
-      - name: Run chart-testing (install)
+      - name: Install
         uses: helm/chart-testing-action@v1.0.0
         with:
           command: install
