--- a/charts/sftpgo/values.yaml
+++ b/charts/sftpgo/values.yaml
@@ -41,6 +41,10 @@ service:
   type: ClusterIP
   port: 2022
 
+volumes: []
+
+volumeMounts: []
+
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
