--- a/charts/sftpgo/values.yaml
+++ b/charts/sftpgo/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: ghcr.io/drakkan/sftpgo
+  repository: drakkan/sftpgo
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
