adding http-service

--- a/charts/sftpgo/templates/service.yaml
+++ b/charts/sftpgo/templates/service.yaml
@@ -18,5 +18,9 @@ spec:
       targetPort: sftp
       protocol: TCP
       name: sftp
+      - port: {{ .Values.service.httpport }}
+      targetPort: http
+      protocol: TCP
+      name: http
   selector:
     {{- include "sftpgo.selectorLabels" . | nindent 4 }}
