--- a/charts/sftpgo/templates/service.yaml
+++ b/charts/sftpgo/templates/service.yaml
@@ -14,7 +14,7 @@ spec:
   externalTrafficPolicy: {{ . }}
   {{- end }}
   ports:
-    - port: {{ .Values.service.port }}
+    - port: {{ .Values.service.sshport }}
       targetPort: sftp
       protocol: TCP
       name: sftp
