feat(charts/kube-secrets-init)!: Remove side effect config
It's probably not needed for this webhook.

See https://kubernetes.io/docs/reference/access-authn-authz/extensible-admission-controllers/

Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/charts/kube-secrets-init/Chart.yaml
+++ b/charts/kube-secrets-init/Chart.yaml
@@ -13,7 +13,7 @@ maintainers:
     url: https://sagikazarmark.hu
 annotations:
   artifacthub.io/changes: |
-    - Initial version
+    - Remove side effect config
   artifacthub.io/images: |
     - name: kube-secrets-init
       image: doitintl/kube-secrets-init:0.2.12
