--- a/charts/kube-secrets-init/templates/mutatingwebhook.yaml
+++ b/charts/kube-secrets-init/templates/mutatingwebhook.yaml
@@ -86,5 +86,5 @@ webhooks:
             - skip
   {{- end }}
   {{- if semverCompare ">=1.12-0" .Capabilities.KubeVersion.GitVersion }}
-    sideEffects: {{ .Values.apiSideEffectValue }}
+    sideEffects: None
   {{- end }}
