--- a/charts/kube-secrets-init/Chart.yaml
+++ b/charts/kube-secrets-init/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 type: application
 name: kube-secrets-init
 version: 0.1.0
-appVersion: 0.2.12
+appVersion: 0.2.14
 description: kube-secrets-init is a Kubernetes mutating admission webhook, that mutates any Pod that is using specially prefixed environment variables, directly or from Kubernetes as Secret or ConfigMap.
 home: https://github.com/doitintl/kube-secrets-init
 sources:
@@ -14,9 +14,10 @@ maintainers:
 annotations:
   artifacthub.io/changes: |
     - Remove side effect config
+    - Update application to 0.2.14
   artifacthub.io/images: |
     - name: kube-secrets-init
-      image: doitintl/kube-secrets-init:0.2.12
+      image: doitintl/kube-secrets-init:0.2.14
   artifacthub.io/maintainers: |
     - name: sagikazarmark
       email: mark.sagikazar@gmail.com
