--- a/charts/kube-secrets-init/Chart.yaml
+++ b/charts/kube-secrets-init/Chart.yaml
@@ -3,6 +3,7 @@ type: application
 name: kube-secrets-init
 version: 0.1.0
 appVersion: 0.2.14
+kubeVersion: ">=1.16"
 description: kube-secrets-init is a Kubernetes mutating admission webhook, that mutates any Pod that is using specially prefixed environment variables, directly or from Kubernetes as Secret or ConfigMap.
 home: https://github.com/doitintl/kube-secrets-init
 sources:
@@ -15,6 +16,7 @@ annotations:
   artifacthub.io/changes: |
     - Remove side effect config
     - Update application to 0.2.14
+    - At least Kubernetes 1.16 is required
   artifacthub.io/images: |
     - name: kube-secrets-init
       image: doitintl/kube-secrets-init:0.2.14
