--- a/charts/sftpgo/Chart.yaml
+++ b/charts/sftpgo/Chart.yaml
@@ -3,6 +3,7 @@ type: application
 name: sftpgo
 version: 0.0.8
 appVersion: 1.2.2
+kubeVersion: ">=1.16"
 description: Fully featured and highly configurable SFTP server with optional FTP/S and WebDAV support.
 keywords:
   - sftp
@@ -18,7 +19,7 @@ maintainers:
     url: https://sagikazarmark.hu
 annotations:
   artifacthub.io/changes: |
-    - Updated SFTPGo to 1.2.2
+    - At least Kubernetes 1.16 is required
   artifacthub.io/images: |
     - name: sftpgo
       image: ghcr.io/drakkan/sftpgo:v1.2.2
