feat(charts/kube-secrets-init): bump chart version
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/charts/kube-secrets-init/Chart.yaml
+++ b/charts/kube-secrets-init/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 type: application
 name: kube-secrets-init
-version: 0.1.0
+version: 0.2.0
 appVersion: 0.2.14
 kubeVersion: ">=1.16"
 description: kube-secrets-init is a Kubernetes mutating admission webhook, that mutates any Pod that is using specially prefixed environment variables, directly or from Kubernetes as Secret or ConfigMap.
@@ -17,6 +17,7 @@ annotations:
     - Remove side effect config
     - Update application to 0.2.14
     - At least Kubernetes 1.16 is required
+    - Add generated documentation
   artifacthub.io/images: |
     - name: kube-secrets-init
       image: doitintl/kube-secrets-init:0.2.14
