--- a/charts/kube-secrets-init/values.yaml
+++ b/charts/kube-secrets-init/values.yaml
@@ -10,8 +10,7 @@ image:
   repository: doitintl/kube-secrets-init
   # -- Image [pull policy](https://kubernetes.io/docs/concepts/containers/images/#updating-images)
   pullPolicy: IfNotPresent
-  # -- Image tag
-  # Overrides the image tag whose default is the chart appVersion.
+  # -- Overrides the image tag (default is the chart appVersion).
   tag: ""
 
 # -- One of the supported secret providers:
