--- a/charts/sftpgo/Chart.yaml
+++ b/charts/sftpgo/Chart.yaml
@@ -3,7 +3,7 @@ type: application
 name: sftpgo
 version: 0.0.9
 appVersion: 1.2.2
-kubeVersion: ">=1.16"
+kubeVersion: ">=1.16.0-0"
 description: Fully featured and highly configurable SFTP server with optional FTP/S and WebDAV support.
 keywords:
   - sftp
@@ -19,8 +19,7 @@ maintainers:
     url: https://sagikazarmark.hu
 annotations:
   artifacthub.io/changes: |
-    - At least Kubernetes 1.16 is required
-    - Add generated documentation
+    - Fix kubeVersion compatibility check on GKE
   artifacthub.io/images: |
     - name: sftpgo
       image: ghcr.io/drakkan/sftpgo:v1.2.2
