--- a/charts/sftpgo/templates/deployment.yaml
+++ b/charts/sftpgo/templates/deployment.yaml
@@ -37,13 +37,17 @@ spec:
             - sftpgo
             - serve
           env:
-            - name: SFTPGO_SFTPD__BIND_PORT
+            - name: SFTPGO_SFTPD__BINDINGS__0__PORT
               value: "2022"
-            - name: SFTPGO_SFTPD__BIND_ADDRESS
+            - name: SFTPGO_SFTPD__BINDINGS__0__ADDRESS
               value: "0.0.0.0"
-            - name: SFTPGO_HTTPD__BIND_PORT
+            - name: SFTPGO_HTTPD__BINDINGS__0__PORT
               value: "8080"
-            - name: SFTPGO_HTTPD__BIND_ADDRESS
+            - name: SFTPGO_HTTPD__BINDINGS__0__ADDRESS
+              value: "0.0.0.0"
+            - name: SFTPGO_TELEMETRY__BIND_PORT
+              value: "10000"
+            - name: SFTPGO_TELEMETRY__BIND_ADDRESS
               value: "0.0.0.0"
           {{- with .Values.envFrom }}
           envFrom:
@@ -56,14 +60,17 @@ spec:
             - name: http
               containerPort: 8080
               protocol: TCP
+            - name: telemetry
+              containerPort: 10000
+              protocol: TCP
           livenessProbe:
             httpGet:
-              path: /api/v1/version
-              port: http
+              path: /healthz
+              port: telemetry
           readinessProbe:
             httpGet:
-              path: /api/v1/version
-              port: http
+              path: /healthz
+              port: telemetry
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- with .Values.volumeMounts }}
