--- a/charts/sftpgo/values.yaml
+++ b/charts/sftpgo/values.yaml
@@ -19,6 +19,10 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
+# -- Application configuration.
+# See the [official documentation](https://github.com/drakkan/sftpgo/blob/master/docs/full-configuration.md).
+config: {}
+
 # -- Additional storage [volumes](https://kubernetes.io/docs/concepts/storage/volumes/) of a Pod.
 # See the [API reference](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.20/#volume-v1-core) for details.
 volumes: []
