feat(charts/kube-secrets-init)!: remove service monitor config
These config options are not needed for now.
We can always add them back.

Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/charts/kube-secrets-init/templates/servicemonitor.yaml
+++ b/charts/kube-secrets-init/templates/servicemonitor.yaml
@@ -5,17 +5,10 @@ metadata:
   name: {{ include "kube-secrets-init.fullname" . }}
   labels:
     {{- include "kube-secrets-init.labels" . | nindent 4 }}
-  {{- with .Values.serviceMonitor.additionalLabels }}
-{{ toYaml . | nindent 4 }}
-  {{- end }}
 spec:
   endpoints:
-    - interval: {{ .Values.serviceMonitor.interval }}
-      port: telemetry
-    {{- with .Values.serviceMonitor.relabellings }}
-      metricrelabelings:
-        {{- toYaml . | nindent 8 }}
-    {{- end }}
+    - port: telemetry
+      interval: {{ .Values.serviceMonitor.interval }}
   jobLabel: {{ include "kube-secrets-init.fullname" . }}
   selector:
     matchLabels:
