--- a/charts/kube-secrets-init/values.yaml
+++ b/charts/kube-secrets-init/values.yaml
@@ -80,12 +80,8 @@ serviceMonitor:
   # -- Enable Prometheus ServiceMonitor.
   enabled: false
 
-  # -- Interval at which metrics should be scraped
+  # -- Interval at which metrics should be scraped.
   interval: 30s
-
-  # -- MetricRelabelConfigs to apply to samples before ingestion.
-  # See the [API reference](https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#relabelconfig) for details.
-  relabellings: []
 
 # -- Container resource [requests and limits](https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/).
 # See the [API reference](https://kubernetes.io/docs/reference/kubernetes-api/workloads-resources/container/#resources) for details.
