refactor(charts/sftpgo): reorganize service port structures
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/charts/sftpgo/templates/service.yaml
+++ b/charts/sftpgo/templates/service.yaml
@@ -15,31 +15,31 @@ spec:
   {{- end }}
   ports:
     {{- if .Values.sftpd.enabled }}
-    - port: {{ .Values.service.ports.sftp }}
+    - name: sftp
+      port: {{ .Values.service.ports.sftp }}
       targetPort: sftp
       protocol: TCP
-      name: sftp
     {{- end }}
     {{- if .Values.ftpd.enabled }}
-    - port: {{ .Values.service.ports.ftp }}
+    - name: ftp
+      port: {{ .Values.service.ports.ftp }}
       targetPort: ftp
       protocol: TCP
-      name: ftp
     {{- end }}
     {{- if .Values.webdavd.enabled }}
-    - port: {{ .Values.service.ports.webdav }}
+    - name: webdav
+      port: {{ .Values.service.ports.webdav }}
       targetPort: webdav
       protocol: TCP
-      name: webdav
     {{- end }}
-    - port: {{ .Values.service.ports.http }}
+    - name: http
+      port: {{ .Values.service.ports.http }}
       targetPort: http
       protocol: TCP
-      name: http
-    - port: 10000
+    - name: telemetry
+      port: 10000
       targetPort: telemetry
       protocol: TCP
-      name: telemetry
   selector:
     {{- include "sftpgo.selectorLabels" . | nindent 4 }}
 
@@ -62,28 +62,28 @@ spec:
   {{- end }}
   ports:
     {{- if and $.Values.sftpd.enabled $service.ports.sftp }}
-    - port: {{ $service.ports.sftp }}
+    - name: sftp
+      port: {{ $service.ports.sftp }}
       targetPort: sftp
       protocol: TCP
-      name: sftp
     {{- end }}
     {{- if and $.Values.ftpd.enabled $service.ports.ftp }}
-    - port: {{ $service.ports.ftp }}
+    - name: ftp
+      port: {{ $service.ports.ftp }}
       targetPort: ftp
       protocol: TCP
-      name: ftp
     {{- end }}
     {{- if and $.Values.webdavd.enabled $service.ports.webdav }}
-    - port: {{ $service.ports.webdav }}
+    - name: webdav
+      port: {{ $service.ports.webdav }}
       targetPort: webdav
       protocol: TCP
-      name: webdav
     {{- end }}
     {{- if $service.ports.http }}
-    - port: {{ $service.ports.http }}
+    - name: http
+      port: {{ $service.ports.http }}
       targetPort: http
       protocol: TCP
-      name: http
     {{- end }}
   selector:
     {{- include "sftpgo.selectorLabels" $ | nindent 4 }}
