--- a/charts/sftpgo/templates/service.yaml
+++ b/charts/sftpgo/templates/service.yaml
@@ -16,24 +16,36 @@ spec:
   ports:
     {{- if .Values.sftpd.enabled }}
     - name: sftp
-      port: {{ .Values.service.ports.sftp }}
+      port: {{ .Values.service.ports.sftp.port }}
+      {{- if and (or (eq .Values.service.type "NodePort") (eq .Values.service.type "LoadBalancer")) .Values.service.ports.sftp.nodePort }}
+      nodePort: {{ .Values.service.ports.sftp.nodePort }}
+      {{- end }}
       targetPort: sftp
       protocol: TCP
     {{- end }}
     {{- if .Values.ftpd.enabled }}
     - name: ftp
-      port: {{ .Values.service.ports.ftp }}
+      port: {{ .Values.service.ports.ftp.port }}
+      {{- if and (or (eq .Values.service.type "NodePort") (eq .Values.service.type "LoadBalancer")) .Values.service.ports.ftp.nodePort }}
+      nodePort: {{ .Values.service.ports.ftp.nodePort }}
+      {{- end }}
       targetPort: ftp
       protocol: TCP
     {{- end }}
     {{- if .Values.webdavd.enabled }}
     - name: webdav
-      port: {{ .Values.service.ports.webdav }}
+      port: {{ .Values.service.ports.webdav.port }}
+      {{- if and (or (eq .Values.service.type "NodePort") (eq .Values.service.type "LoadBalancer")) .Values.service.ports.webdav.nodePort }}
+      nodePort: {{ .Values.service.ports.webdav.nodePort }}
+      {{- end }}
       targetPort: webdav
       protocol: TCP
     {{- end }}
     - name: http
-      port: {{ .Values.service.ports.http }}
+      port: {{ .Values.service.ports.http.port }}
+      {{- if and (or (eq .Values.service.type "NodePort") (eq .Values.service.type "LoadBalancer")) .Values.service.ports.http.nodePort }}
+      nodePort: {{ .Values.service.ports.http.nodePort }}
+      {{- end }}
       targetPort: http
       protocol: TCP
     - name: telemetry
@@ -56,32 +68,44 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  type: {{ required (printf "Service type is required for %q" $name) $service.type }}
+  type: {{ required (printf "Service type is required for service %q" $name) $service.type }}
   {{- with $service.externalTrafficPolicy }}
   externalTrafficPolicy: {{ . }}
   {{- end }}
   ports:
     {{- if and $.Values.sftpd.enabled $service.ports.sftp }}
     - name: sftp
-      port: {{ $service.ports.sftp }}
+      port: {{ required (printf "SFTP service port is required for service %q" $name) $service.ports.sftp.port }}
+      {{- if and (or (eq $service.type "NodePort") (eq $service.type "LoadBalancer")) $service.ports.sftp.nodePort }}
+      nodePort: {{ $service.ports.sftp.nodePort }}
+      {{- end }}
       targetPort: sftp
       protocol: TCP
     {{- end }}
     {{- if and $.Values.ftpd.enabled $service.ports.ftp }}
     - name: ftp
-      port: {{ $service.ports.ftp }}
+      port: {{ required (printf "SFP service port is required for service %q" $name) $service.ports.ftp.port }}
+      {{- if and (or (eq $service.type "NodePort") (eq $service.type "LoadBalancer")) $service.ports.ftp.nodePort }}
+      nodePort: {{ $service.ports.ftp.nodePort }}
+      {{- end }}
       targetPort: ftp
       protocol: TCP
     {{- end }}
     {{- if and $.Values.webdavd.enabled $service.ports.webdav }}
     - name: webdav
-      port: {{ $service.ports.webdav }}
+      port: {{ required (printf "WebDAV service port is required for service %q" $name) $service.ports.webdav.port }}
+      {{- if and (or (eq $service.type "NodePort") (eq $service.type "LoadBalancer")) $service.ports.webdav.nodePort }}
+      nodePort: {{ $service.ports.webdav.nodePort }}
+      {{- end }}
       targetPort: webdav
       protocol: TCP
     {{- end }}
     {{- if $service.ports.http }}
     - name: http
-      port: {{ $service.ports.http }}
+      port: {{ required (printf "HTTP service port is required for service %q" $name) $service.ports.http.port }}
+      {{- if and (or (eq $service.type "NodePort") (eq $service.type "LoadBalancer")) $service.ports.http.nodePort }}
+      nodePort: {{ $service.ports.http.nodePort }}
+      {{- end }}
       targetPort: http
       protocol: TCP
     {{- end }}
