--- a/charts/sftpgo/values.yaml
+++ b/charts/sftpgo/values.yaml
@@ -89,17 +89,33 @@ service:
   type: ClusterIP
 
   ports:
-    # -- SFTP service port
-    sftp: 22
+    sftp:
+      # -- SFTP service port
+      port: 22
 
-    # -- FTP service port
-    ftp: 21
+      # -- (int) SFTP node port (when applicable)
+      nodePort:
 
-    # -- WebDAV service port
-    webdav: 81
+    ftp:
+      # -- FTP service port
+      port: 21
 
-    # -- REST API service port
-    http: 80
+      # -- (int) FTP node port (when applicable)
+      nodePort:
+
+    webdav:
+      # -- WebDAV service port
+      port: 81
+
+      # -- (int) WebDAV node port (when applicable)
+      nodePort:
+
+    http:
+      # -- REST API service port
+      port: 80
+
+      # -- (int) REST API node port (when applicable)
+      nodePort:
 
   # -- Route external traffic to node-local or cluster-wide endoints.
   # Useful for [preserving the client source IP](https://kubernetes.io/docs/tasks/access-application-cluster/create-external-load-balancer/#preserving-the-client-source-ip).
@@ -112,7 +128,9 @@ services: {}
   #   annotations: {}
   #   type: LoadBalancer
   #   ports:
-  #     sftp: 22 # Only SFTP will be exposed
+  #     sftp: # Only SFTP will be exposed
+  #       port: 22
+  #       nodePort:
   #   externalTrafficPolicy:
 
 # -- Container resource [requests and limits](https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/).
