--- a/charts/sftpgo/Chart.yaml
+++ b/charts/sftpgo/Chart.yaml
@@ -20,6 +20,7 @@ maintainers:
 annotations:
   artifacthub.io/changes: |
     - Add node port to services
+    - Add app protocol to services
   artifacthub.io/images: |
     - name: sftpgo
       image: ghcr.io/drakkan/sftpgo:v2.0.1
