--- a/charts/sftpgo/templates/service.yaml
+++ b/charts/sftpgo/templates/service.yaml
@@ -22,6 +22,9 @@ spec:
       {{- end }}
       targetPort: sftp
       protocol: TCP
+      {{- if semverCompare ">=1.20-0" .Capabilities.KubeVersion.GitVersion }}
+      appProtocol: sftp-ssh
+      {{- end }}
     {{- end }}
     {{- if .Values.ftpd.enabled }}
     - name: ftp
@@ -31,6 +34,9 @@ spec:
       {{- end }}
       targetPort: ftp
       protocol: TCP
+      {{- if semverCompare ">=1.20-0" .Capabilities.KubeVersion.GitVersion }}
+      appProtocol: ftp
+      {{- end }}
     {{- end }}
     {{- if .Values.webdavd.enabled }}
     - name: webdav
@@ -40,6 +46,9 @@ spec:
       {{- end }}
       targetPort: webdav
       protocol: TCP
+      {{- if semverCompare ">=1.20-0" .Capabilities.KubeVersion.GitVersion }}
+      appProtocol: webdav
+      {{- end }}
     {{- end }}
     - name: http
       port: {{ .Values.service.ports.http.port }}
@@ -48,10 +57,16 @@ spec:
       {{- end }}
       targetPort: http
       protocol: TCP
+      {{- if semverCompare ">=1.20-0" .Capabilities.KubeVersion.GitVersion }}
+      appProtocol: http
+      {{- end }}
     - name: telemetry
       port: 10000
       targetPort: telemetry
       protocol: TCP
+      {{- if semverCompare ">=1.20-0" .Capabilities.KubeVersion.GitVersion }}
+      appProtocol: http
+      {{- end }}
   selector:
     {{- include "sftpgo.selectorLabels" . | nindent 4 }}
 
@@ -81,6 +96,9 @@ spec:
       {{- end }}
       targetPort: sftp
       protocol: TCP
+      {{- if semverCompare ">=1.20-0" $.Capabilities.KubeVersion.GitVersion }}
+      appProtocol: sftp-ssh
+      {{- end }}
     {{- end }}
     {{- if and $.Values.ftpd.enabled $service.ports.ftp }}
     - name: ftp
@@ -90,6 +108,9 @@ spec:
       {{- end }}
       targetPort: ftp
       protocol: TCP
+      {{- if semverCompare ">=1.20-0" $.Capabilities.KubeVersion.GitVersion }}
+      appProtocol: ftp
+      {{- end }}
     {{- end }}
     {{- if and $.Values.webdavd.enabled $service.ports.webdav }}
     - name: webdav
@@ -99,6 +120,9 @@ spec:
       {{- end }}
       targetPort: webdav
       protocol: TCP
+      {{- if semverCompare ">=1.20-0" $.Capabilities.KubeVersion.GitVersion }}
+      appProtocol: webdav
+      {{- end }}
     {{- end }}
     {{- if $service.ports.http }}
     - name: http
@@ -108,6 +132,9 @@ spec:
       {{- end }}
       targetPort: http
       protocol: TCP
+      {{- if semverCompare ">=1.20-0" $.Capabilities.KubeVersion.GitVersion }}
+      appProtocol: http
+      {{- end }}
     {{- end }}
   selector:
     {{- include "sftpgo.selectorLabels" $ | nindent 4 }}
