feat(charts/sftpgo): add load balancer settings to services
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/charts/sftpgo/Chart.yaml
+++ b/charts/sftpgo/Chart.yaml
@@ -21,6 +21,7 @@ annotations:
   artifacthub.io/changes: |
     - Add node port to services
     - Add app protocol to services
+    - Add load balancer settings to services
   artifacthub.io/images: |
     - name: sftpgo
       image: ghcr.io/drakkan/sftpgo:v2.0.1
