ci: disable fail-fast to always run tests for all kube versions
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -51,6 +51,7 @@ jobs:
     needs: lint
     if: needs.lint.outputs.changed == 'true'
     strategy:
+      fail-fast: false
       matrix:
         kube: ["1.16", "1.17", "1.18", "1.19", "1.20"]
 
